# c-raycaster

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-backup.bat  build.bat  compile_commands.json  oldcmakelists.txt
.cache/clangd/index/: main.c.7448BC92F99C6C11.idx  main.c.8A4DDF9F84076B33.idx
src/: main.c
